crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__member_body_unowned_tokens.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class C { int a; /* member */ + ; void m() {} }

formatted:
class C {
  int a; /* member */

  + ;
  void m() {
  }
}

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(30), end: TextSize(31) }) message=unexpected token in type body
