crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__module_annotation.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
@Deprecated module com.example.annotated {}

formatted:
@Deprecated
module com.example.annotated {
}

diagnostics:
(none)
